src/objects/AIF_Matrix_Statuses__c.object
<CustomObject>
    <description>This object is for REPORTING purposes only... this object is refreshed via IOD</description>
    <fields>
        <fullName>AIF_Approval_Matrix_ID__c</fullName>
        <externalId>true</externalId>
        <label>AIF Approval Matrix ID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>AIF_Status__c</fullName>
        <label>AIF Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AppMgr_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AIF_Matrix_Statusess2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AppMgr_Status__c</fullName>
        <label>AppMgr Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicationName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ApplicationName</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>AIF Matrix Statusess</relationshipLabel>
        <relationshipName>AIF_Matrix_Statusess</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DTS_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DTS Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AIF_Matrix_Statusess1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DTS_Status__c</fullName>
        <label>DTS Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeviceName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DeviceName</label>
        <referenceTo>Device__c</referenceTo>
        <relationshipLabel>AIF Matrix Statusess</relationshipLabel>
        <relationshipName>AIF_Matrix_Statusess</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Device_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Device Application</label>
        <referenceTo>DeviceApplicationAssoc__c</referenceTo>
        <relationshipLabel>AIF Matrix Statusess</relationshipLabel>
        <relationshipName>AIF_Matrix_Statusess</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FMD_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FMD Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AIF_Matrix_Statusess4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FMD_Status__c</fullName>
        <label>FMD Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finance_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Finance Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AIF_Matrix_Statusess3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Finance_Status__c</fullName>
        <label>Finance Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LRB_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LRB Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AIF_Matrix_Statusess</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LRB_Status__c</fullName>
        <label>LRB Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartnerMgr_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PartnerMgr Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AIF_Matrix_Statusess5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PartnerMgr_Status__c</fullName>
        <label>PartnerMgr Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requestor_Status__c</fullName>
        <label>Requestor Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requestor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AIF_Matrix_Statusess6</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>AIF Matrix Statuses</label>
    <nameField>
        <label>AIF Matrix Statuses Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AIF Matrix Statusess</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>